# yarp-omega3

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
config/: 99-omega3-libusb.rules
src/samples/python/: change_position_move_params.py  force_tracking_control.py  position_control.py  position_tracking_control.py  sensor_characterization.py
src/server/: CMakeLists.txt
src/server/include/: Server.h
src/server/sdk-3.10.1/: Makefile  Makefile.common
src/server/sdk-3.10.1/doc/dhd/: dhd_glossary.html  dhdc_8h.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  examples.html  files.html  globals.html  globals_c.html  globals_d.html  globals_defs.html  globals_e.html  globals_enum.html  globals_eval.html  globals_func.html  globals_g.html  globals_h.html  globals_i.html  globals_j.html  globals_k.html  globals_o.html  globals_p.html  globals_r.html  globals_s.html  globals_u.html  globals_w.html  hello_world_8cpp-example.html  index.html  menudata.js  multiple_devices_8cpp-example.html  pages.html  single_device_8cpp-example.html  stylesheet.css
src/server/sdk-3.10.1/doc/drd/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  drd_glossary.html  drdc_8h.html  files.html  globals.html  globals_func.html  index.html  menudata.js  pages.html  tabs.css
src/server/sdk-3.10.1/doc/licenses/: license.txt
src/server/sdk-3.10.1/examples/: Makefile
src/server/sdk-3.10.1/examples/CLI/: Makefile
src/server/sdk-3.10.1/examples/CLI/autocenter/: Makefile  autocenter.cpp
src/server/sdk-3.10.1/examples/CLI/autoinit/: autoinit.cpp
src/server/sdk-3.10.1/examples/CLI/center/: Makefile  center.cpp
src/server/sdk-3.10.1/examples/CLI/encoders/: encoders.cpp
src/server/sdk-3.10.1/examples/CLI/gravity/: gravity.cpp
src/server/sdk-3.10.1/examples/CLI/jacobian/: jacobian.cpp
src/server/sdk-3.10.1/examples/CLI/mirror/: mirror.cpp
src/server/sdk-3.10.1/examples/CLI/multithread/: multithread.cpp
src/server/sdk-3.10.1/examples/CLI/robot/: robot.cpp
src/server/sdk-3.10.1/examples/CLI/segment/: segment.cpp
src/server/sdk-3.10.1/examples/CLI/sensor/: sensor.cpp
src/server/sdk-3.10.1/examples/CLI/viscosity/: viscosity.cpp
src/server/sdk-3.10.1/examples/CLI/wrist/: Makefile  wrist.cpp
src/server/sdk-3.10.1/examples/GLFW/: Makefile
src/server/sdk-3.10.1/examples/GLFW/constraints/: CGeometry.h  CMaths.h  CMatrix3d.h  CPolySolver.h  CTransform.h  CVector3d.h  Makefile  constraints.cpp
src/server/sdk-3.10.1/examples/GLFW/sphere/: sphere.cpp
src/server/sdk-3.10.1/examples/GLFW/torques/: torques.cpp
src/server/sdk-3.10.1/examples/GLFW/torus/: CMacrosGL.h  torus.cpp
src/server/sdk-3.10.1/examples/GLFW/transformations/: CConstants.h  CGeometry.h  CGlobals.h  CMaths.h  CMatrix3d.h  CPolySolver.h  CString.h  CTransform.h  CVector3d.h  Makefile  transformations.cpp
src/server/sdk-3.10.1/include/: dhdc.h  drdc.h
src/server/sdk-3.10.1/lib/release/lin-x86_64-gcc/: libdhd.so.3.10.1  libdrd.so.3.10.1
src/server/src/: Server.cpp  main.cpp
src/server/thrift/: server_idl.thrift
